fix: postcode lookup button iOS appearance

--- a/sass/base/components/postcode-lookup/_postcode-lookup.scss
+++ b/sass/base/components/postcode-lookup/_postcode-lookup.scss
@@ -44,6 +44,7 @@
           border: 0;
           color: $colour-white;
           background:$colour-persian-purple;
+          -webkit-appearance: none;
 
           @include breakpoint($screen-md) {
             width: auto;
